G1. Fixed layout issue in IE7,8,9

--- a/src/css/scss/_components/_pagination.scss
+++ b/src/css/scss/_components/_pagination.scss
@@ -46,6 +46,7 @@ $bulletMargin: px-em(5px);
   @include transition();
   @include opacity(0);
   height: 0;
+  z-index: 999;
 
   &.show-paddles {
     @include opacity(100);
